957.	[func]		tomek
	Per IPv4 subnet statistics (subnet[id].assigned-addresses and
	subnet[id].total-addresses) has been implemented.
	(Trac #3798, git bab2030f56bbf390959f9f9238a8acc62d583c70)

956.	[func]		marcin
	Improved log messages emitted by the allocation engine,
	which now uses a dedicated logger.
	(Trac #3852, git 923928774f4f59c887d768cf155b5978e838a6f2)

955.	[func]		tmark
	Added unit tests to kea-admin for testing the lease-dump command
	with a PostgreSQL backend. Updated PostgreSQL database installation
	instructions in Kea Administrator's guide to include use of kea-admin
	tool.
	(Trac #3884, git 0772b7df2a89e1019141be1d0ddec30d53c4b919)

954.	[func]		fdupont
	Enhance the versioning information printed by the executables and
	make it more consistent across all of the executables. "-v" is for
	basic Kea version information, "-V" provides more detailed
	versioning and versions for external dynamic libraries, finally
	"-W" provides the configure report from the configuration step
	during the build of Kea.
	(Trac #3513, git 584cf666e101c6cb5c9af76175ddd867ece85764)
	(Trac #3859, git 384e6c6225de18fc97d606e4a1972baeef598ba4)

953.	[bug]		fdupont
	Corrected the setting of string characters to values above 127
	in HMAC tests.
	(Trac #3829, git 54f4ec64e513fea1547631122dc1af8579fae3db)

952.	[bug]		fdupont
	Made some loop indexes an unsigned type to avoid compiler warnings
	where the termination condition is comparison with an unsigned
	value.
	(Trac #3833, git 3db9f1d78f59856b982a1ff84c3b5a1ba7ea39df)

951.	[build]		fdupont
	Removed BUNDY configuration backend.
	(Trac #3732, git 96364cbbb15318c8f55d5b287cda0990d3eaae32)

950.	[doc]		marcin
	Updated section about logging in the User Guide. Also,
	updated Hooks Developer's Guide with the recommendations for
	the developers about use of logging in hooks libraries.
	(Trac #3805, git b403de1f335a2fb5098c9abc0858b8137892f868)

949.	[func]		tmark
	kea-admin now supports dumping MySQL and PostgreSQL lease tables